# coupon-smartcontract

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  lib.rs
examples/: make-coupon-signature.rs
