[package]
name = "ocex"
version = "0.1.0"
authors = ["[Anton Shramko] <[antonshramko@yandex.ru]>"]
edition = "2021"

[dependencies]
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_env = { version = "3.0", default-features = false }

# For run tests needs add feature "getrandom", now i search how to add automatically with cfg!
schnorrkel = { version = "0.10.2", default-features = false, features = ["u32_backend"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
arrayvec = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
clap = { version = "3.1.8", features = ["derive"] }

[lib]
name = "ocex"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
test = ["schnorrkel/getrandom", "hex/default"]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
