[package]
name = "ocex"
version = "0.1.0"
authors = ["[Anton Shramko] <[antonshramko@yandex.ru]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-alpha.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

# For run tests needs add feature "getrandom", now i search how to add automatically with cfg!
schnorrkel = { version = "0.10.2", default-features = false, features = ["u32_backend"] }
arrayvec = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
clap = { version = "3.1.8", features = ["derive"] }

[lib]
name = "ocex"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
test = ["schnorrkel/getrandom", "hex/default"]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []